src/test/deca/syntax/invalid/created/faux17.deca
{
	int î = 23;
	bool â = false;
}

